[gd_scene load_steps=6 format=2]

[ext_resource path="res://Custom Fonts/vcr/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Custom Fonts/Laser/Laser.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 224, 168 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 455.0
margin_top = 212.0
margin_right = 824.0
margin_bottom = 507.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 369.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Kodo Kube"
align = 1
valign = 1

[node name="btn_iniciar" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 369.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 2 )
text = "INICIAR"

[node name="btn_opcoes" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 369.0
margin_bottom = 230.0
custom_fonts/font = SubResource( 2 )
text = "OPÇÕES"

[node name="btn_sair" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 245.0
margin_right = 369.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 2 )
text = "SAIR"

[node name="btn_carregar" type="Button" parent="."]
visible = false
margin_right = 12.0
margin_bottom = 20.0
[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_iniciar" to="." method="_on_btn_iniciar_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_opcoes" to="." method="_on_btn_opcoes_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_sair" to="." method="_on_btn_sair_pressed"]
[connection signal="pressed" from="btn_carregar" to="." method="_on_btn_carregar_pressed"]
